# ohms-coordinator

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
.github/workflows/: ci.yml
src/: api.rs  api_tests.rs  ohms_coordinator.did
src/domain/: mod.rs
src/infra/: guards.rs  metrics.rs
src/services/: agent_spawning.rs  autonomous_coord.rs  bounty.rs  dedup.rs  econ_integration.rs  instruction_analyzer.rs  mod.rs  quota_manager.rs  registry.rs  routing.rs
tests/: integration_tests.rs
