[package]
name = "ohms_coordinator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
serde_cbor = "0.11"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.21"
thiserror = "1.0"
log = "0.4"
getrandom = { version = "0.2", features = ["custom"] }
ic-stable-structures = { workspace = true }
futures = "0.3"
